src/test/deca/avecObjet/valid/field_assign_from_method_return copy.deca
// Description :
// Affectation d’un champ avec le retour d’une méthode
//
// Resultats :
// ok

class S {
    int a;
    int f() { return 5; }
    void test() { 
        a = f(); 
    }
}
