src/test/deca/avecObjet/invalid/call_method_arg_type_custom.deca
// Description :
// appel de méthode avec type d'argument incorrect
//
// Resultats :
// Erreur contextuelle
// Ligne 10 : type d'argument incompatible

class Q {
    void f(int a) {}
    void test() {
        f(true); // doit échouer
    }
}
